@@ -84,11 +84,10 @@ void init_taskbar()
 		int height_ink, height;
 		get_text_size(panel->g_task.font_desc, &height_ink, &height, panel->area.height, "TAjpg", 5);
 
-		if (!panel->g_task.maximum_width)
+		if (!panel->g_task.maximum_width && panel_horizontal)
 			panel->g_task.maximum_width = server.monitor[panel->monitor].width;
 
-		// add task_icon_size
-		panel->g_task.text_posx = panel->g_task.area.paddingxlr + panel->g_task.area.pix.border.width;
+		panel->g_task.text_posx = panel->g_task.area.pix.border.width + panel->g_task.area.paddingxlr;
 		panel->g_task.text_posy = (panel->g_task.area.height - height) / 2.0;
 		if (panel->g_task.icon) {
 			panel->g_task.icon_size1 = panel->g_task.area.height - (2 * panel->g_task.area.paddingy);
@@ -292,7 +291,7 @@ void resize_taskbar(void *obj)
 		else {
 			taskbar->task_width = pixel_height;
 			taskbar->task_modulo = modulo_height;
-			taskbar->text_width = taskbar->area.width - (2 * taskbar->area.paddingy) - (2 * taskbar->area.pix.border.width);
+			taskbar->text_width = taskbar->area.width - (2 * panel->g_taskbar.paddingy) - panel->g_task.text_posx - panel->g_task.area.pix.border.width - panel->g_task.area.paddingx;
 		}
 
 		// change pos_y and height for all tasks
